--- a/Figures_Thesis/Figure_codes/Figure_1_and_2.ipynb
+++ b/Figures_Thesis/Figure_codes/Figure_1_and_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,17 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.path.insert(1, '/user/sebert/home/Documents/Repositories/motion/anticipation_1D')\n",
+    "sys.path.insert(1, '/Users/simoneebert/Documents/Repositories/motion_anticipation_network/model')\n",
     "from utils import  DOG\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.1.undefined"
   },
   "orig_nbformat": 4
  },
