--- a/Figures_Paper/Figure_codes/Figure_7_FB.ipynb
+++ b/Figures_Paper/Figure_codes/Figure_7_FB.ipynb
@@ -94,6 +94,14 @@
     "    omins_A = []\n",
     "\n",
     "    for s in speeds: \n",
+    "\n",
+    "\n",
+    "        net = 'ff_thesis_linear'\n",
+    "        # load dataframe \n",
+    "\n",
+    "        home = os.path.expanduser(\"~\")\n",
+    "        fp = f'{home}/Documents/Simulations/motion_anticipation_network/{net}'\n",
+    "\n",
     "        fp = f'/user/sebert/home/Documents/Simulations/motion/anticipation_1D/Reciporcal/{net}/smooth_{s}'\n",
     "        with open(f'{fp}/out', 'rb') as handle:\n",
     "            out = pickle.load(handle)    \n",
