--- a/Figures_Paper/Figure_codes/Figure_0.ipynb
+++ b/Figures_Paper/Figure_codes/Figure_0.ipynb
@@ -20,6 +20,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Figures Introduction"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
