--- a/Figures_Paper_v2/Figure_codes/F5-speedmech-fb.ipynb
+++ b/Figures_Paper_v2/Figure_codes/F5-speedmech-fb.ipynb
@@ -2,17 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import os\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "from scipy.interpolate import interp1d\n",
     "from scipy.ndimage import gaussian_filter\n",
     "import pickle\n",
-    "from scipy.signal import convolve\n"
+    "from scipy.signal import convolve\n",
+    "from scipy.fft import fft, fftfreq\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "home = os.path.expanduser(\"~\")\n"
    ]
   },
   {
@@ -24,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,12 +46,45 @@
     "        return 1\n",
     "    else: \n",
     "        return 0\n",
-    "    "
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def main_frequency(signal, sampling_rate):\n",
+    "    \"\"\"\n",
+    "    Calculate the main frequency of a signal.\n",
+    "\n",
+    "    Parameters:\n",
+    "    signal (numpy array): The input signal (time domain).\n",
+    "    sampling_rate (float): The sampling rate of the signal in Hz.\n",
+    "\n",
+    "    Returns:\n",
+    "    float: The main frequency of the signal in Hz.\n",
+    "    \"\"\"\n",
+    "    # Number of samples in the signal\n",
+    "    N = len(signal)\n",
+    "\n",
+    "    # Perform the Fast Fourier Transform (FFT)\n",
+    "    fft_values = fft(signal)\n",
+    "\n",
+    "    # Get the corresponding frequencies\n",
+    "    frequencies = fftfreq(N, d=1/sampling_rate)\n",
+    "\n",
+    "    # Only consider the positive frequencies (as FFT produces symmetric output)\n",
+    "    positive_frequencies = frequencies[:N // 2]\n",
+    "    positive_fft_values = np.abs(fft_values[:N // 2])\n",
+    "\n",
+    "    # Find the frequency with the maximum amplitude in the FFT result\n",
+    "    main_freq_index = np.argmax(positive_fft_values)\n",
+    "    main_freq = positive_frequencies[main_freq_index]\n",
+    "\n",
+    "    return main_freq\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,17 +111,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "speeds = np.array([0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1.0,2.0])\n"
+    "speeds = np.asarray([0.1,0.2,0.3,0.4,0.4,0.5,0.6,0.7,0.8,0.9,1.0,2.0,1.1,1.2,1.3,1.4,1.5,1.6,1.7,1.8,1.9])\n",
+    "speeds = speeds[::2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,8 +147,8 @@
     "             'Reciporcal_mono_linear_plastic_opt/noGCGainControl/fixed/wBA/wBA_0.0']\n",
     "\n",
     "\n",
-    "nets_list = ['Loops/ff_thesis_linear/wGA/wGA_0.0',\n",
-    "             'Loops/ff_thesis_linear/wGA/wGA_-0.002' ]\n",
+    "nets_list = ['fb_linear_fasttaurfnospsur/wBA/wBA_0.0',\n",
+    "             'fb_linear_fasttaurfnospsur/wBA/wBA_10.0', ]\n",
     "\n",
     "\n",
     "\n",
@@ -139,8 +183,9 @@
     "    ants_drive = []\n",
     "\n",
     "    for s in speeds: \n",
-    "        fp = f'/Users/simoneebert/Documents/Simulations/motion_anticipation_network/{net}/smooth_{s}'\n",
-    "        with open(f'{fp}/out', 'rb') as handle:\n",
+    "\n",
+    "        fp = f'{home}/Documents/Simulations/motion_anticipation_network/{net}/smooth_{s}'\n",
+    "        with open(f'{fp}/out_smooth', 'rb') as handle:\n",
     "            out = pickle.load(handle)    \n",
     "            \n",
     "        with open(f'{fp}/params', 'rb') as handle:\n",
@@ -149,18 +194,19 @@
     "        duration = paramsi['duration']\n",
     "        dt = paramsi['dt']\n",
     "        time = np.arange(0,duration,dt) #- (paramsi['spacing']*cell)/paramsi['speed']#*1000#+45\n",
-    "        pos_cell = paramsi['pos_rf_GC_mid'][cell]\n",
+    "        mid_cell = int(len(paramsi['pos_rf_GC_mid'])/2)\n",
+    "        pos_cell = paramsi['pos_rf_GC_mid'][mid_cell]\n",
     "        barr = [bar(t,pos_cell, v = s) for t in time]\n",
-    "        tp_bar = paramsi['tps_rf_GC_mid'][cell]\n",
+    "        tp_bar = paramsi['tps_rf_GC_mid'][mid_cell]\n",
     "\n",
     "        peak_RB = time[np.argmax(out['RB'][50,:])]\n",
     "        peak_RG = time[np.argmax(out['RG'][:])]\n",
-    "        peak_drive = time[np.argmax(out['F'][:])]\n",
+    "        peak_drive = time[np.argmax(out['inp'][:])]\n",
     "\n",
     "        amp_RB = np.max(out['RB'][50,:])\n",
     "        amp_RA = np.max(out['RA'][50,:])\n",
     "        amp_RG = np.max(out['RG'][:])\n",
-    "        amp_drive = np.max(out['F'][:])\n",
+    "        amp_drive = np.max(out['inp'][:])\n",
     "\n",
     "        \n",
     "\n",
@@ -178,7 +224,7 @@
     "        tps_rf_GC_mid.append(tp_bar)\n",
     "        times.append(time)\n",
     "\n",
-    "        Fs.append(out['F'])\n",
+    "        Fs.append(out['inp'])\n",
     "        RBs.append(out['RB'][50,:])\n",
     "        RAs.append(out['RA'][50,:])\n",
     "        RGs.append(out['RG'])\n",
@@ -232,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,12 +289,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
-    "speeds_plot = [0.1,0.5,1.0]\n",
     "speeds_plot_idx = [0,4,-2]\n",
+    "speeds_plot =speeds[speeds_plot_idx]\n",
+    "\n",
     "xlims = [(2,12),(1.2,3),(0.2,0.75)]"
    ]
   },
@@ -261,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +350,7 @@
     "figsize_ratio = 3\n",
     "figsize = (16,12)\n",
     "\n",
-    "save = True\n",
+    "save = False\n",
     "save_name = \"Figure 1\"\n",
     "show = True\n",
     "image_format = \"png\"\n",
@@ -305,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,20 +416,21 @@
     "        ax2 = fig.add_subplot(gs[2:4,x], sharex = ax)\n",
     "    \n",
     "\n",
-    "        ax3 = fig.add_subplot(gs[4:6,x], sharex = ax)\n",
+    "        ax3 = fig.add_subplot(gs[4:6,x])\n",
     "    \n",
     "\n",
     "    else:\n",
     "        ax = fig.add_subplot(gs[0:2,x])\n",
     "        ax2 = fig.add_subplot(gs[2:4,x], sharex = ax)\n",
-    "        ax3 = fig.add_subplot(gs[4:6,x], sharex = ax)\n",
+    "        ax3 = fig.add_subplot(gs[4:6,x])\n",
     "\n",
     "\n",
     "\n",
     "    ax.text(panellabel_position[0]-0.0,panellabel_position[1]+0.25, LAB[x], transform=ax.transAxes,\n",
     "          fontsize=fontsize_panellabel, fontweight='bold', va='top', ha='right')\n",
     "\n",
-    "    ax.set_xlim(-0.4,0.4)\n",
+    "    ax.set_xlim(-0.7,0.7)\n",
+    "    ax3.set_xlim(-0.7,0.7)\n",
     "  \n",
     "    ax.set_title(f'v = {s} mm/s', loc = 'left')\n",
     "    # plot bar\n",
@@ -421,15 +476,15 @@
     "\n",
     "\n",
     "\n",
-    "fig.savefig('../svg/3_FF_speedscaling.svg', format='svg')\n",
-    "fig.savefig('../png/3_FF_speedscaling.png', format='png')\n",
+    "# fig.savefig('../svg/3_FB_speedscaling.svg', format='svg')\n",
+    "# fig.savefig('../png/3_FB_speedscaling.png', format='png')\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,10 +493,137 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plt frequency against, speed\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.legend.Legend at 0x71eeb0d6e360>"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import matplotlib.colors as colors\n",
+    "import matplotlib.cm as cmx\n",
+    "\n",
+    "cmapb = plt.get_cmap('hsv', len(speeds)+1)\n",
+    "\n",
+    "cNorm = colors.Normalize(vmin =speeds.min(), vmax = speeds.max())\n",
+    "scalarMap = cmx.ScalarMappable(norm=cNorm, cmap=cmapb)\n",
+    "\n",
+    "\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "gs = fig.add_gridspec(3,1)\n",
+    "\n",
+    "ax0 = fig.add_subplot(gs[0,0])\n",
+    "ax0.set_title('bar' ,loc = 'left')\n",
+    "\n",
+    "ax1 = fig.add_subplot(gs[1,0],sharex = ax0)\n",
+    "ax1.set_title('Vdrive' ,loc = 'left')\n",
+    "\n",
+    "ax = fig.add_subplot(gs[2,0],sharex = ax0)\n",
+    "ax.set_title('VB' ,loc = 'left')\n",
+    "\n",
+    "freqs = []\n",
+    "\n",
+    "for i,s in enumerate(speeds): \n",
+    "    xdata =data['times'][i]- (data['tps_rf_mid'][i] -0.16/s)\n",
+    "    frequency = main_frequency(data[net]['RB'][i], 1/paramsi['dt'])\n",
+    "    freqs.append(frequency)\n",
+    "    ax0.plot(xdata,data['bars'][i], linewidth = lw, color = cmapb(i), label = f'{s} mm/s')\n",
+    "\n",
+    "    # # plot drive \n",
+    "    ax1.plot(xdata,data[net]['F'][i]/np.max(data[net]['F'][-1]), linewidth = lw, color = cmapb(i))\n",
+    "\n",
+    "    # # plot RB\n",
+    "    ax.plot(xdata,data[net]['RB'][i]/np.max(data[net]['RB'][-1]), linewidth = 2, color = cmapb(i))\n",
+    "    # ax2.plot(xdata,data[net]['RA'][i]/np.max(data[net]['RA'][-1]), label = f'RA', color = 'red', linewidth = lw)\n",
+    "    # # ax2.plot(xdata,data[net_pool]['RB'][i]/np.max(data[net_pool]['RB'][-1]), label = f'RB bipolars only', color = 'blue', linestyle = ':', linewidth = lw)\n",
+    "\n",
+    "    # plot RG\n",
+    "    # ax.plot(xdata,data[net]['RG'][i]/np.max(data[net]['RG'][-1]), label = f'RG ff inhibition', color = 'k', linewidth = lw)\n",
+    "    # ax3.plot(xdata,data[net_pool]['RG'][i]/np.max(data[net_pool]['RG'][-1]), linestyle = ':', label = f'RG bipolars only', color = 'k', linewidth = lw)\n",
+    "fig.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.collections.PathCollection at 0x71eeb126dc70>"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fig = plt.figure()\n",
+    "gs = fig.add_gridspec(1,2)\n",
+    "\n",
+    "ax0 = fig.add_subplot(gs[0,0])\n",
+    "ax1 = fig.add_subplot(gs[0,1])\n",
+    "\n",
+    "ixdmax = (data[net]['ants']['RG_bar']*speeds).argmax()\n",
+    "\n",
+    "ax0.plot(speeds,speeds,linestyle = ':')\n",
+    "ax0.plot(speeds,freqs)\n",
+    "ax0.scatter(speeds,freqs)\n",
+    "ax0.scatter(speeds[ixdmax],freqs[ixdmax])\n",
+    "\n",
+    "ax1.plot(speeds,data[net]['ants']['RG_bar']*speeds)\n",
+    "ax1.scatter(speeds[ixdmax],data[net]['ants']['RG_bar'][ixdmax]*speeds[ixdmax])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.collections.PathCollection at 0x71eeb1fbd820>"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plt.figure()\n",
+    "plt.plot(speeds,data[net]['ants']['RB_bar']*speeds)\n",
+    "plt.scatter(speeds,data[net]['ants']['RB_bar']*speeds)"
+   ]
   },
   {
    "cell_type": "code",
@@ -467,7 +649,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4
  },
