--- a/Figures_Paper_v2/Figure_codes/F4-prefspeed-fb.ipynb
+++ b/Figures_Paper_v2/Figure_codes/F4-prefspeed-fb.ipynb
@@ -1169,7 +1169,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "motion",
    "language": "python",
    "name": "python3"
   },
@@ -1183,7 +1183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4
  },
