--- a/Figures_Paper_v2/Figure_codes/F4-prefspeed-ff.ipynb
+++ b/Figures_Paper_v2/Figure_codes/F4-prefspeed-ff.ipynb
@@ -1031,7 +1031,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "motion",
    "language": "python",
    "name": "python3"
   },
@@ -1045,7 +1045,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4
  },
