--- a/Brian/notebooks/plot_recurrent_net_layer_nearest_neighbor_impulse.ipynb
+++ b/Brian/notebooks/plot_recurrent_net_layer_nearest_neighbor_impulse.ipynb
@@ -2,7 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
+   "id": "c4eaf899",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "11699a86-dc74-4929-80f2-ce3e0ae1a39d",
    "metadata": {
     "id": "11699a86-dc74-4929-80f2-ce3e0ae1a39d"
@@ -13,6 +33,7 @@
     "import matplotlib.pyplot as plt\n",
     "import multiprocessing\n",
     "import os\n",
+    "import sys\n",
     "from scipy.ndimage import gaussian_filter1d\n",
     "from scipy.signal import convolve\n",
     "from brian2 import *"
@@ -20,60 +41,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "84111023",
+   "execution_count": 23,
+   "id": "67314c2d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "netname = 'recurrent_one_to_one'\n",
-    "netdir = f'../output/Brian/{netname}'\n",
-    "if not os.path.isdir(netdir):\n",
-    "    os.mkdir(netdir)"
+    "sys.path.append(\"../lib\") # add code library to paths\n",
+    "\n",
+    "# add lib to path \n",
+    "from model_beta import Model\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "f9d13e0f-8b58-4eb1-bb2e-b257e7164071",
-   "metadata": {
-    "id": "f9d13e0f-8b58-4eb1-bb2e-b257e7164071"
-   },
+   "execution_count": 24,
+   "id": "84111023",
+   "metadata": {},
    "outputs": [],
    "source": [
+    "netname = 'recurrent_nn'\n",
+    "model = Model(netname)  # initiate the model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "65b816f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = {\n",
+    "'sig_c' : 0.05  ,    # bipolar receptive fied size ~ 1/5 of the actual size [mm]\n",
+    "'tau1' : 0.04   ,    # excitation time constant of the temporal filter [s]\n",
+    "'tau2' : 0.0876 ,    # rebound time constant [s]\n",
+    "'bifw' : 0.     ,    # relative weight of rebound/excitation [1]\n",
     "\n",
-    "sig_c = 0.05      # bipolar receptive fied size ~ 1/5 of the actual size [mm]\n",
-    "tau1 = 0.04       # excitation time constant of the remporal filter [s]\n",
-    "tau2 = 0.0876     # rebound time constant [s]\n",
-    "bifw = 0.         # relative weight of rebound/excitation [1]\n",
-    "# scale_mV = 1.     # UPDATED \n",
-    "scale_mV = 20.     # UPDATED \n",
+    "'scale_mV' : 20.,     # UPDATED \n",
     "\n",
-    "tauA = 0.15   # time constant of amacrine cells [s]\n",
-    "tauB = 0.08   # time constant of bipolar cells [s]\n",
-    "tauG = 0.01   # time contant of ganglion cells [s]\n",
+    "'tauA' : 0.15   ,     # time constant of amacrine cells [s]\n",
+    "'tauB' : 0.08   ,     # time constant of bipolar cells [s]\n",
+    "'tauG' : 0.01   ,     # time contant of ganglion cells [s]\n",
     "\n",
-    "wAB = 10.     # synaptic weight from bipolar to amacrine [Hz]\n",
-    "wBA = -10.    # synaptic weight from amacrine to bipolar [Hz]\n",
-    "wGB = 4.0     # synaptic weight from bipolar to gangion  [Hz].   #UPDATED\n",
-    "wGA = 0.      # synaptic weight from amacrine  to gangion  [Hz]\n",
+    "'wAB' : 10.     ,     # synaptic weight from bipolar to amacrine [Hz]\n",
+    "'wBA' : -10.    ,     # synaptic weight from amacrine to bipolar [Hz]\n",
+    "'wGB' : 4.0     ,     # synaptic weight from bipolar to gangion  [Hz].   #UPDATED\n",
+    "'wGA' : 0.      ,     # synaptic weight from amacrine  to gangion  [Hz]\n",
     "\n",
-    "slope = 5  # slope for ganglion cell recritifation [Hz/mV].   #UPDATED\n",
-    "threshold = 0 # threshold for ganglion cell recritifation [Hz/mV]\n",
+    "'slope' : 5     ,     # slope for ganglion cell recritifation [Hz/mV].   #UPDATED\n",
+    "'threshold' : 0 ,     # threshold for ganglion cell recritifation [Hz/mV]\n",
+    "'sig_pool' : 0.065 ,  # sigma for gaussian pooling in ganlion gells [mm]\n",
     "\n",
-    "sig_pool = 0.065   # sigma for gaussian pooling in ganlion gells [mm]\n",
-    "spacing = 0.005    # spacing of cells on the lattice [mm]\n",
     "\n",
-    "N = 512            # number of neurons in each layer [1]\n",
-    "idx = int(N/2)\n",
+    "'spacing' : 0.005  ,  # spacing of cells on the lattice [mm]\n",
+    "'dt' : 0.001      ,   # integration time step [s]\n",
+    "'N' : 512          ,  # number of neurons in each layer [1]\n",
     "\n",
-    "b =  0.160          # half bar width [mm]\n",
-    "speed =  0.8        # speed [mm/s]\n",
-    "dt = 0.001          # integration time step [s]"
+    "\n",
+    "# idx = int(N/2)\n",
+    "# b =  0.160         # half bar width [mm]\n",
+    "# speed =  0.8       # speed [mm/s]  \n",
+    "}\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "02f5027f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# create connectivity matrix TODO write a class for this !!!\n",
+    "\n",
+    "C = np.zeros((params['N'],params['N']))\n",
+    "ii = np.arange(0,params['N']-1,1).astype(int)  # list of source cells for rightward connections\n",
+    "ji = ii + 1                          # target cells of rightward connections\n",
+    "\n",
+    "\n",
+    "C[ii,ji] = 1\n",
+    "\n",
+    "ii = np.arange(1,params['N'],1).astype(int)    # list of source cells for leftward connections\n",
+    "ji = ii - 1                         # target cells of leftward connections\n",
+    "\n",
+    "C[ii,ji] = 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "fcec5515",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "model.set_params(params)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "f9d13e0f-8b58-4eb1-bb2e-b257e7164071",
+   "metadata": {
+    "id": "f9d13e0f-8b58-4eb1-bb2e-b257e7164071"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20.0"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.set_connectivity(C)\n",
+    "model.set_stimulus(S)\n",
+    "model.simulate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "f948cac9-e67c-466e-b904-492c257e7103",
    "metadata": {
     "id": "f948cac9-e67c-466e-b904-492c257e7103"
@@ -138,7 +230,9 @@
     "            outst_prime = [(outst[i]-outst[i-1])/dt for i in range(0,tps)]\n",
     "            F_array[c,:] = outst[:]/tauB + outst_prime\n",
     "\n",
-    "        return F_array\n"
+    "        return F_array\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -216,12 +310,15 @@
     "    # create connectivity matrix\n",
     "    C = np.zeros((N,N))\n",
     "    ii = np.arange(0,N-1,1).astype(int)  # list of source cells for rightward connections\n",
-    "    ji = ii                            # target cells of rightward connections\n",
+    "    ji = ii + 1                          # target cells of rightward connections\n",
     "\n",
     "\n",
     "    C[ii,ji] = 1\n",
     "\n",
-    "   \n",
+    "    ii = np.arange(1,N,1).astype(int)    # list of source cells for leftward connections\n",
+    "    ji = ii - 1                         # target cells of leftward connections\n",
+    "\n",
+    "    C[ii,ji] = 1\n",
     "\n",
     "    sources, targets = C.nonzero()      # get cell indices for sources and targets\n",
     "    synab.connect(i=sources, j=targets) # connect sources and targets BC to AC\n",
@@ -1357,7 +1454,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "brian2",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1371,7 +1468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
