--- a/Brian/notebooks/simulate_recurrent_net_layer_nearest_neighbor_step.ipynb
+++ b/Brian/notebooks/simulate_recurrent_net_layer_nearest_neighbor_step.ipynb
@@ -374,7 +374,7 @@
     "\n",
     "\n",
     "wBAs = np.arange(1,25,1)\n",
-    "tauAs = np.logspace(0,1)*0.02\n",
+    "tauAs =np.round(np.logspace(0,1)*0.02,3)\n",
     "wBAs = wBAs\n",
     "tauAs = tauAs[::2]\n",
     "\n",
