--- a/Brian/notebooks/simulate_forward_net_layer_nearest_neighbor_impulse.ipynb
+++ b/Brian/notebooks/simulate_forward_net_layer_nearest_neighbor_impulse.ipynb
@@ -73,12 +73,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../output/recurrent_nn\n"
+      "../output/forward_nn\n"
      ]
     }
    ],
    "source": [
-    "netname = 'recurrent_nn'\n",
+    "netname = 'forward_nn'\n",
     "model = Model(netname)  # initiate the model\n"
    ]
   },
@@ -104,9 +104,9 @@
     "'tauG' : 0.01   ,     # time contant of ganglion cells [s]\n",
     "\n",
     "'wAB' : 10.     ,     # synaptic weight from bipolar to amacrine [Hz]\n",
-    "'wBA' : -10.    ,     # synaptic weight from amacrine to bipolar [Hz]\n",
+    "'wBA' : 0.    ,     # synaptic weight from amacrine to bipolar [Hz]\n",
     "'wGB' : 4.0     ,     # synaptic weight from bipolar to gangion  [Hz].   #UPDATED\n",
-    "'wGA' : 0.      ,     # synaptic weight from amacrine  to gangion  [Hz]\n",
+    "'wGA' : -2.0      ,     # synaptic weight from amacrine  to gangion  [Hz]\n",
     "\n",
     "'slope' : 5     ,     # slope for ganglion cell recritifation [Hz/mV].   #UPDATED\n",
     "'threshold' : 0 ,     # threshold for ganglion cell recritifation [Hz/mV]\n",
@@ -203,13 +203,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../output/recurrent_nn/gImpulse\n"
+      "../output/forward_nn/gImpulse\n"
      ]
     }
    ],
    "source": [
     "model.set_stimulus(S,'gImpulse')\n",
-    "model.simulate()"
+    "model.simulate() "
    ]
   },
   {
@@ -229,14 +229,13 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "dur = 3.                      # duration of the simulation [s]\n",
     "tps = int(dur/params['dt'])             # number of time-points in the simulation [1]\n",
     "time = np.arange(0,tps)*params['dt']    # time array for the simulation 1xtps, in [s]\n",
     "\n",
     "# initialize the stimulus\n",
     "S = np.zeros((params['N'],tps))\n",
-    "S[206,int(tps/2)] = 1/params['dt']*0.05\n"
+    "S[206,int(tps/2)] = 1/params['dt']*0.05"
    ]
   },
   {
@@ -251,7 +250,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../output/recurrent_nn/lImpulse\n"
+      "../output/forward_nn/lImpulse\n"
      ]
     }
    ],
@@ -350,8 +349,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24 50\n",
-      "../output/recurrent_nn/gImpulse\n"
+      "15 50\n",
+      "../output/forward_nn/gImpulse\n"
      ]
     },
     {
@@ -359,27 +358,35 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=40)]: Using backend LokyBackend with 40 concurrent workers.\n",
-      "[Parallel(n_jobs=40)]: Done   5 tasks      | elapsed:  1.4min\n",
-      "[Parallel(n_jobs=40)]: Done  18 tasks      | elapsed:  2.2min\n",
-      "[Parallel(n_jobs=40)]: Done  33 tasks      | elapsed:  2.4min\n",
-      "[Parallel(n_jobs=40)]: Done  48 tasks      | elapsed:  3.5min\n",
-      "[Parallel(n_jobs=40)]: Done  65 tasks      | elapsed:  4.5min\n",
-      "[Parallel(n_jobs=40)]: Done  82 tasks      | elapsed:  4.7min\n",
-      "[Parallel(n_jobs=40)]: Done 101 tasks      | elapsed:  6.0min\n",
-      "[Parallel(n_jobs=40)]: Done 120 tasks      | elapsed:  6.9min\n",
-      "[Parallel(n_jobs=40)]: Done 141 tasks      | elapsed:  7.8min\n",
-      "[Parallel(n_jobs=40)]: Done 162 tasks      | elapsed:  9.1min\n",
-      "[Parallel(n_jobs=40)]: Done 185 tasks      | elapsed:  9.9min\n",
-      "[Parallel(n_jobs=40)]: Done 208 tasks      | elapsed: 11.2min\n",
-      "[Parallel(n_jobs=40)]: Done 233 tasks      | elapsed: 12.4min\n",
-      "[Parallel(n_jobs=40)]: Done 258 tasks      | elapsed: 13.5min\n",
-      "[Parallel(n_jobs=40)]: Done 285 tasks      | elapsed: 15.0min\n"
+      "[Parallel(n_jobs=40)]: Done   5 tasks      | elapsed:  3.0min\n",
+      "[Parallel(n_jobs=40)]: Done  18 tasks      | elapsed:  4.4min\n",
+      "[Parallel(n_jobs=40)]: Done  33 tasks      | elapsed:  4.7min\n",
+      "[Parallel(n_jobs=40)]: Done  48 tasks      | elapsed:  6.3min\n",
+      "[Parallel(n_jobs=40)]: Done  65 tasks      | elapsed:  8.8min\n",
+      "[Parallel(n_jobs=40)]: Done  82 tasks      | elapsed:  9.2min\n",
+      "[Parallel(n_jobs=40)]: Done 101 tasks      | elapsed: 12.0min\n",
+      "[Parallel(n_jobs=40)]: Done 120 tasks      | elapsed: 13.4min\n",
+      "[Parallel(n_jobs=40)]: Done 141 tasks      | elapsed: 15.5min\n",
+      "[Parallel(n_jobs=40)]: Done 162 tasks      | elapsed: 17.7min\n",
+      "[Parallel(n_jobs=40)]: Done 185 tasks      | elapsed: 19.8min\n",
+      "[Parallel(n_jobs=40)]: Done 208 tasks      | elapsed: 22.2min\n",
+      "[Parallel(n_jobs=40)]: Done 233 tasks      | elapsed: 24.5min\n",
+      "[Parallel(n_jobs=40)]: Done 258 tasks      | elapsed: 26.7min\n",
+      "[Parallel(n_jobs=40)]: Done 285 tasks      | elapsed: 29.5min\n",
+      "[Parallel(n_jobs=40)]: Done 312 tasks      | elapsed: 31.8min\n",
+      "[Parallel(n_jobs=40)]: Done 341 tasks      | elapsed: 35.2min\n",
+      "[Parallel(n_jobs=40)]: Done 370 tasks      | elapsed: 37.8min\n",
+      "[Parallel(n_jobs=40)]: Done 401 tasks      | elapsed: 40.4min\n",
+      "[Parallel(n_jobs=40)]: Done 432 tasks      | elapsed: 43.6min\n",
+      "[Parallel(n_jobs=40)]: Done 465 tasks      | elapsed: 46.6min\n",
+      "[Parallel(n_jobs=40)]: Done 498 tasks      | elapsed: 49.8min\n",
+      "[Parallel(n_jobs=40)]: Done 533 tasks      | elapsed: 53.1min\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "wBAs = np.arange(1,25,1)\n",
+    "wBAs = np.arange(1.,4.,0.2)\n",
     "tauAs = np.round(np.logspace(0,1)*0.02,3)\n",
     "# wBAs = wBAs[::10]\n",
     "# tauAs = tauAs[::10]\n",
@@ -388,7 +395,7 @@
     "print(len(wBAs),len(tauAs))\n",
     "\n",
     "\n",
-    "df = pd.DataFrame(columns = ['BC206', 'f','wBA','tauA'])\n",
+    "df = pd.DataFrame(columns = ['BC206', 'f','wGA','tauA'])\n",
     "measure_point = int(2.9/params['dt'])\n",
     "\n",
     "\n",
@@ -416,7 +423,7 @@
     "        wBA = par[0]\n",
     "        tauA= par[1]\n",
     "        params['tauA'] = tauA\n",
-    "        params['wBA'] = -1*wBA\n",
+    "        params['wGA'] = -1*wBA\n",
     "\n",
     "        model.set_params(params)\n",
     "        BC206 = model.simulate(save = False)\n",
@@ -424,7 +431,7 @@
     "    \n",
     "\n",
     "        dict = {'BC206': BC206,\n",
-    "                'wBA': wBA,\n",
+    "                'wGA': wBA,\n",
     "                'tauA': tauA,\n",
     "                'f' : f\n",
     "                }\n",
