--- a/Brian/notebooks/original_recurrent_net_layer_nearest_neighbor.ipynb
+++ b/Brian/notebooks/original_recurrent_net_layer_nearest_neighbor.ipynb
@@ -622,7 +622,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -636,7 +636,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
