--- a/Brian/notebooks/simulate_forward_net_layer_nearest_neighbor_step.ipynb
+++ b/Brian/notebooks/simulate_forward_net_layer_nearest_neighbor_step.ipynb
@@ -45,25 +45,25 @@
     "sys.path.append(\"../lib\") # add code library to paths\n",
     "\n",
     "# add lib to path \n",
-    "from model_beta import Model\n",
-    "\n"
+    "from model_beta import Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "24c667d2",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# TODO: turn this into  script"
+    "# TODO: turn this into  script\n",
+    "# os.mkdir('../output/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "84111023",
    "metadata": {
     "tags": []
@@ -73,18 +73,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../output/recurrent_nn\n"
+      "../output/forward_nn\n"
      ]
     }
    ],
    "source": [
-    "netname = 'recurrent_nn'\n",
+    "netname = 'forward_nn'\n",
     "model = Model(netname)  # initiate the model\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "65b816f6",
    "metadata": {
     "tags": []
@@ -104,9 +104,9 @@
     "'tauG' : 0.01   ,     # time contant of ganglion cells [s]\n",
     "\n",
     "'wAB' : 10.     ,     # synaptic weight from bipolar to amacrine [Hz]\n",
-    "'wBA' : -10.    ,     # synaptic weight from amacrine to bipolar [Hz]\n",
+    "'wBA' : 0.    ,     # synaptic weight from amacrine to bipolar [Hz]\n",
     "'wGB' : 4.0     ,     # synaptic weight from bipolar to gangion  [Hz].   #UPDATED\n",
-    "'wGA' : 0.      ,     # synaptic weight from amacrine  to gangion  [Hz]\n",
+    "'wGA' : -2.0      ,     # synaptic weight from amacrine  to gangion  [Hz]\n",
     "\n",
     "'slope' : 5     ,     # slope for ganglion cell recritifation [Hz/mV].   #UPDATED\n",
     "'threshold' : 0 ,     # threshold for ganglion cell recritifation [Hz/mV]\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "02f5027f",
    "metadata": {
     "tags": []
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "fcec5515",
    "metadata": {
     "tags": []
@@ -168,12 +168,12 @@
    "id": "437f075a",
    "metadata": {},
    "source": [
-    "# simulate response to global impulse"
+    "# simulate response to global step full contrast"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "b14fcf72",
    "metadata": {
     "tags": []
@@ -185,14 +185,17 @@
     "tps = int(dur/params['dt'])             # number of time-points in the simulation [1]\n",
     "time = np.arange(0,tps)*params['dt']    # time array for the simulation 1xtps, in [s]\n",
     "\n",
+    "start = int(1./params['dt'])\n",
+    "stop  = int(2./params['dt']) \n",
+    "\n",
     "# initialize the stimulus\n",
     "S = np.zeros((params['N'],tps))\n",
-    "S[:,int(tps/2)] = 1\n"
+    "S[:,start:stop] = 1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "f9d13e0f-8b58-4eb1-bb2e-b257e7164071",
    "metadata": {
     "id": "f9d13e0f-8b58-4eb1-bb2e-b257e7164071",
@@ -203,12 +206,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../output/recurrent_nn/gImpulse\n"
+      "../output/forward_nn/gStep\n"
      ]
     }
    ],
    "source": [
-    "model.set_stimulus(S,'gImpulse')\n",
+    "model.set_stimulus(S,'gStep')\n",
     "model.simulate()"
    ]
   },
@@ -217,12 +220,12 @@
    "id": "bc07ccca",
    "metadata": {},
    "source": [
-    "# simulate response to local Impulse"
+    "# simulate response to global step  half contrast"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "05715ed6",
    "metadata": {
     "tags": []
@@ -230,18 +233,21 @@
    "outputs": [],
    "source": [
     "\n",
-    "dur = 3.                      # duration of the simulation [s]\n",
+    "dur = 3.                                # duration of the simulation [s]\n",
     "tps = int(dur/params['dt'])             # number of time-points in the simulation [1]\n",
     "time = np.arange(0,tps)*params['dt']    # time array for the simulation 1xtps, in [s]\n",
     "\n",
+    "start = int(1./params['dt'])\n",
+    "stop  = int(2./params['dt']) \n",
+    "\n",
     "# initialize the stimulus\n",
     "S = np.zeros((params['N'],tps))\n",
-    "S[206,int(tps/2)] = 1/params['dt']*0.05\n"
+    "S[:,start:stop] = .5\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "06e71829",
    "metadata": {
     "tags": []
@@ -251,42 +257,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../output/recurrent_nn/lImpulse\n"
+      "../output/forward_nn/gStephalf\n"
      ]
     }
    ],
    "source": [
-    "model.set_stimulus(S,'lImpulse')\n",
+    "model.set_stimulus(S,'gStephalf')\n",
     "model.simulate()"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "669fafd1",
-   "metadata": {},
-   "source": [
-    "# loop over parameter for frequency grid"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "c14fbb23",
+   "execution_count": null,
+   "id": "16b50943",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "48"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../output/forward_nn/gStep_0.1\n",
+      "../output/forward_nn/gStep_0.2\n",
+      "../output/forward_nn/gStep_0.30000000000000004\n",
+      "../output/forward_nn/gStep_0.4\n",
+      "../output/forward_nn/gStep_0.5\n",
+      "../output/forward_nn/gStep_0.6\n",
+      "../output/forward_nn/gStep_0.7000000000000001\n",
+      "../output/forward_nn/gStep_0.8\n",
+      "../output/forward_nn/gStep_0.9\n"
+     ]
     }
    ],
+   "source": [
+    "# loop over contrasts \n",
+    "contrasts = np.arange(0.1,1.1,0.1)\n",
+    "S = np.zeros((params['N'],tps))\n",
+    "\n",
+    "for c in contrasts: \n",
+    "    S[:,start:stop] = c\n",
+    "    stimname = f'gStep_{c}'\n",
+    "    model.set_stimulus(S,stimname)\n",
+    "    model.simulate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f87d87a5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "# loop over paramerter and save response, steady state\n",
     "import pandas as pd\n",
@@ -298,114 +321,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "1cd19426",
+   "execution_count": null,
+   "id": "0bf432fb-5fe7-4960-8f3d-14b2dde53c33",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "from scipy.fft import fft, fftfreq\n",
     "\n",
-    "def main_frequency(signal, sampling_rate):\n",
-    "    \"\"\"\n",
-    "    Calculate the main frequency of a signal.\n",
     "\n",
-    "    Parameters:\n",
-    "    signal (numpy array): The input signal (time domain).\n",
-    "    sampling_rate (float): The sampling rate of the signal in Hz.\n",
-    "\n",
-    "    Returns:\n",
-    "    float: The main frequency of the signal in Hz.\n",
-    "    \"\"\"\n",
-    "    # Number of samples in the signal\n",
-    "    N = len(signal)\n",
-    "\n",
-    "    # Perform the Fast Fourier Transform (FFT)\n",
-    "    fft_values = fft(signal)\n",
-    "\n",
-    "    # Get the corresponding frequencies\n",
-    "    frequencies = fftfreq(N, d=1/sampling_rate)\n",
-    "\n",
-    "    # Only consider the positive frequencies (as FFT produces symmetric output)\n",
-    "    positive_frequencies = frequencies[:N // 2]\n",
-    "    positive_fft_values = np.abs(fft_values[:N // 2])\n",
-    "\n",
-    "    # Find the frequency with the maximum amplitude in the FFT result\n",
-    "    main_freq_index = np.argmax(positive_fft_values)\n",
-    "    main_freq = positive_frequencies[main_freq_index]\n",
-    "\n",
-    "    return main_freq"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "58d17b2c",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "24 50\n",
-      "../output/recurrent_nn/gImpulse\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=40)]: Using backend LokyBackend with 40 concurrent workers.\n",
-      "[Parallel(n_jobs=40)]: Done   5 tasks      | elapsed:  1.4min\n",
-      "[Parallel(n_jobs=40)]: Done  18 tasks      | elapsed:  2.2min\n",
-      "[Parallel(n_jobs=40)]: Done  33 tasks      | elapsed:  2.4min\n",
-      "[Parallel(n_jobs=40)]: Done  48 tasks      | elapsed:  3.5min\n",
-      "[Parallel(n_jobs=40)]: Done  65 tasks      | elapsed:  4.5min\n",
-      "[Parallel(n_jobs=40)]: Done  82 tasks      | elapsed:  4.7min\n",
-      "[Parallel(n_jobs=40)]: Done 101 tasks      | elapsed:  6.0min\n",
-      "[Parallel(n_jobs=40)]: Done 120 tasks      | elapsed:  6.9min\n",
-      "[Parallel(n_jobs=40)]: Done 141 tasks      | elapsed:  7.8min\n",
-      "[Parallel(n_jobs=40)]: Done 162 tasks      | elapsed:  9.1min\n",
-      "[Parallel(n_jobs=40)]: Done 185 tasks      | elapsed:  9.9min\n",
-      "[Parallel(n_jobs=40)]: Done 208 tasks      | elapsed: 11.2min\n",
-      "[Parallel(n_jobs=40)]: Done 233 tasks      | elapsed: 12.4min\n",
-      "[Parallel(n_jobs=40)]: Done 258 tasks      | elapsed: 13.5min\n",
-      "[Parallel(n_jobs=40)]: Done 285 tasks      | elapsed: 15.0min\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "wBAs = np.arange(1,25,1)\n",
-    "tauAs = np.round(np.logspace(0,1)*0.02,3)\n",
-    "# wBAs = wBAs[::10]\n",
-    "# tauAs = tauAs[::10]\n",
-    "\n",
+    "wBAs = np.arange(1.,4.,0.2)\n",
+    "tauAs =np.round(np.logspace(0,1)*0.02,3)\n",
+    "wBAs = wBAs\n",
+    "tauAs = tauAs[::2]\n",
     "\n",
     "print(len(wBAs),len(tauAs))\n",
+    "# wBAs = wBAs[:2]\n",
+    "# tauAs = tauAs[:2]\n",
     "\n",
-    "\n",
-    "df = pd.DataFrame(columns = ['BC206', 'f','wBA','tauA'])\n",
+    "df = pd.DataFrame(columns = ['BC206', 'VB*','wGA','tauA'])\n",
     "measure_point = int(2.9/params['dt'])\n",
     "\n",
     "\n",
     "\n",
-    "dur = 2.                                # duration of the simulation [s]\n",
+    "dur = 4.                                # duration of the simulation [s]\n",
     "tps = int(dur/params['dt'])             # number of time-points in the simulation [1]\n",
     "time = np.arange(0,tps)*params['dt']    # time array for the simulation 1xtps, in [s]\n",
     "\n",
     "start = int(1./params['dt'])\n",
     "stop  = int(3./params['dt']) \n",
     "\n",
-    "\n",
     "# initialize the stimulus\n",
     "S = np.zeros((params['N'],tps))\n",
-    "S[:,int(tps/2)] = 1\n",
+    "S[:,start:stop] = 1\n",
     "\n",
-    "model.set_stimulus(S,'gImpulse')\n",
+    "model.set_stimulus(S,'gStep')\n",
     "model.dt = 0.01\n",
     "\n",
     "grid = np.array(np.meshgrid(wBAs,tauAs)).T.reshape(-1,2)\n",
@@ -416,17 +366,17 @@
     "        wBA = par[0]\n",
     "        tauA= par[1]\n",
     "        params['tauA'] = tauA\n",
-    "        params['wBA'] = -1*wBA\n",
+    "        params['wGA'] = -1*wBA\n",
     "\n",
     "        model.set_params(params)\n",
     "        BC206 = model.simulate(save = False)\n",
-    "        f = main_frequency(BC206, model.dt)\n",
+    "        VBstar = BC206[measure_point]\n",
     "    \n",
     "\n",
     "        dict = {'BC206': BC206,\n",
-    "                'wBA': wBA,\n",
+    "                'wGA': wBA,\n",
     "                'tauA': tauA,\n",
-    "                'f' : f\n",
+    "                'VB*' : VBstar\n",
     "                }\n",
     "        \n",
     "        return dict\n",
@@ -440,20 +390,20 @@
     "        df.loc[len(df)] = xi\n",
     "\n",
     "#save dataframe \n",
-    "df.to_csv(f'{model.dir}/{model.stimname}/grid_frequency.csv')\n"
+    "df.to_csv(f'{model.dir}/{model.stimname}/grid_steadystate.csv')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16b50943",
+   "id": "7c07fa4b",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
     "plt.plot(df['BC206'].values[0])\n",
-    "plt.plot(df['BC206'].values[-1])\n",
+    "plt.plot(df['BC206'].values[1])\n",
     "plt.plot(df['BC206'].values[2])\n",
     "plt.plot(df['BC206'].values[3])"
    ]
@@ -461,19 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40c479b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(df)\n",
-    "for i in range(len(df)):\n",
-    "    print(main_frequency(df['BC206'].values[i],model.dt))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "78e35cdd",
+   "id": "df724af0",
    "metadata": {},
    "outputs": [],
    "source": []
